fixed whitespace on mobile screens on right side

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-/*body::before{
-    display: block;
-    content: '';
-    height: 55px;
-}*/
+@media only screen{
+    html,
+    body{
+    width:100%;
+    overflow-x:hidden;
+    }
+}
